updated PracticeForm, tweaked home UI, added EA favicon

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
     <meta name="author" content="EA Giving Tuesday">
     <title>EAGT Practice Simulator</title>
 
-<!--     <link rel="icon" href="%PUBLIC_URL%/img/favicon-16.png" type="image/png" sizes="16x16">
-    <link rel="icon" href="%PUBLIC_URL%/img/favicon-32.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="%PUBLIC_URL%/img/favicon-96.png" type="image/png" sizes="96x96">
- -->
+    <link rel="icon" href="https://www.effectivealtruism.org/favicon.ico">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
@@ -18,17 +15,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div className="container" id="app-container">
+      <div id="root"></div>
+    </div>
 
     <footer class="footer">
       <div class="container text-center text-muted">
-        <p>Test footer</p>
-        <!-- <p>
-          Copyright © 
-          <a href="https://angelinahli.com/">Angelina Li</a>
-          2019. Source code on 
-          <a href="https://github.com/angelinahli/matching">Github</a>.
-        </p> -->
+        <p>Find more information at <a href="https://www.eagivingtuesday.org/" target="_blank">EA Giving Tuesday</a>.</p>
       </div>
     </footer>
   </body>
