--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,13 @@
     <meta name="description" content="EAGT Practice Simulator">
     <meta name="author" content="EA Giving Tuesday">
     <title>EAGT Practice Simulator</title>
-
     <link rel="icon" href="https://www.effectivealtruism.org/favicon.ico">
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Google+Sans:400,500|Roboto:300,400,500,700|Source+Code+Pro:400,700&amp;display=swap" rel="stylesheet" type="text/css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div className="container" id="app-container">
-      <div id="root"></div>
-    </div>
+    <div id="root"></div>
 
     <footer class="footer">
       <div class="container text-center text-muted">
