added google analytics tag

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,14 @@
         <p>Find more information at <a href="https://www.eagivingtuesday.org/" target="_blank">EA Giving Tuesday</a>.</p>
       </div>
     </footer>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0R9M6Y8ERZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-0R9M6Y8ERZ');
+    </script>
   </body>
 </html>
