--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,12 @@
 
     <footer class="footer">
       <div class="container text-center text-muted">
-        <p>Find more information at <a href="https://www.eagivingtuesday.org/" target="_blank">EA Giving Tuesday</a>.</p>
+        <p>
+          Please read the <a href="https://www.eagiv.org/simguide" target="_blank">simulator instructions</a>.
+        </p>
+        <p>
+          For general infomration see the <a href="https://www.eagivingtuesday.org/" target="_blank">EA Giving Tuesday website</a>
+        </p>
       </div>
     </footer>
 
