Small footer changes

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,8 @@
       <div class="container text-center text-muted">
         <p>
           Please read the <a href="https://www.eagiv.org/simguide" target="_blank">simulator instructions</a>.
-        </p>
-        <p>
-          For general infomration see the <a href="https://www.eagivingtuesday.org/" target="_blank">EA Giving Tuesday website</a>
+          <br />
+          For general infomration see the <a href="https://www.eagivingtuesday.org/" target="_blank">EA Giving Tuesday website</a>.
         </p>
       </div>
     </footer>
