--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
     </footer>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0R9M6Y8ERZ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129415686-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-0R9M6Y8ERZ');
+      gtag('config', 'UA-129415686-2');
     </script>
   </body>
 </html>
