--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <p>
           Please read the <a href="https://www.eagiv.org/simguide" target="_blank">simulator instructions</a>.
           <br />
-          For general infomration see the <a href="https://www.eagivingtuesday.org/" target="_blank">EA Giving Tuesday website</a>.
+          For general information see the <a href="https://www.eagivingtuesday.org/" target="_blank">EA Giving Tuesday website</a>.
         </p>
       </div>
     </footer>
